--- a/plugin.xml
+++ b/plugin.xml
@@ -80,6 +80,7 @@
     <platform name="android">
 
         <dependency id="android.support.v4" />
+        <source-file src="src/android/libs/android-support-v7-appcompat.jar" target-dir="libs" />
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="LocalNotification">
