--- a/plugin.xml
+++ b/plugin.xml
@@ -138,6 +138,8 @@
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+            <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
+
         </config-file>
 
         <source-file
