--- a/plugin.xml
+++ b/plugin.xml
@@ -24,7 +24,7 @@
     </engines>
 
     <!-- dependencies -->
-    <dependency id="org.apache.cordova.device" />
+    <dependency id="cordova-plugin-device" />
 
     <!-- info -->
     <info>
@@ -79,7 +79,7 @@
     <!-- android -->
     <platform name="android">
 
-        <dependency id="android.support.v4" />
+        <dependency id="cordova-plugin-android-support-v4" />
         <source-file src="src/android/libs/android-support-v7-appcompat.jar" target-dir="libs" />
 
         <config-file target="res/xml/config.xml" parent="/*">
