--- a/plugin.xml
+++ b/plugin.xml
@@ -79,7 +79,7 @@
     <!-- android -->
     <platform name="android">
 
-        <dependency id="cordova-plugin-android-support-v4" />
+        <!--<dependency id="cordova-plugin-android-support-v4" />-->
         <source-file src="src/android/libs/android-support-v7-appcompat.jar" target-dir="libs" />
 
         <config-file target="res/xml/config.xml" parent="/*">
@@ -134,7 +134,7 @@
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
-
+            <uses-permission android:name="android.permission.VIBRATE" />
         </config-file>
 
         <source-file
